<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie_detailed_base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/activity_movie_detailed_base_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_space"
            android:layout_marginTop="@dimen/default_margin_space"
            android:layout_marginEnd="@dimen/default_margin_space">

            <TextView
                android:id="@+id/activity_movie_detailed_tv_original_title_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/original_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toTopOf="@+id/activity_movie_detailed_tv_original_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_movie_detailed_tv_original_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_movie_detailed_tv_original_title_label"
                tools:text="O grande dragão branco" />

            <TextView
                android:id="@+id/activity_movie_detailed_overview_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:layout_marginTop="@dimen/default_margin_space"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_movie_detailed_tv_original_title" />

            <TextView
                android:id="@+id/activity_movie_detailed_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_movie_detailed_overview_label"
                tools:text="@string/description_example" />

            <TextView
                android:id="@+id/activity_movie_detailed_language_title_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:layout_marginTop="@dimen/default_margin_space"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_movie_detailed_overview" />

            <TextView
                android:id="@+id/activity_movie_detailed_language_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_movie_detailed_language_title_label"
                tools:text="en-US" />

            <TextView
                android:id="@+id/activity_movie_detailed_tv_popularity_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/popularity"
                android:layout_marginTop="@dimen/default_margin_space"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_movie_detailed_language_title" />

            <TextView
                android:id="@+id/activity_movie_detailed_tv_popularity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_movie_detailed_tv_popularity_label"
                tools:text="1230" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_movie_detailed_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/activity_movie_detailed_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/activity_movie_detailed_backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_layout_height"
                android:contentDescription="@string/poster"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:transitionName="@string/transition_name"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/jean_claude_van_damme" />

            <ImageView
                android:id="@+id/activity_movie_detailed_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_layout_height"
                android:background="@drawable/card_gradient_background"
                android:contentDescription="@string/background"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:id="@+id/activity_movie_detailed_favorite_icon"
                android:layout_width="@dimen/button_height"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/top_card_margin"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favorite"
                android:src="@drawable/ic_heart_border"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.gabrielbmoro.programmingchallenge.presentation.components.FiveStarsComponent
                android:id="@+id/activity_movie_detailed_five_stars_component"
                android:layout_width="120dp"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/top_card_margin" />

            <Toolbar
                android:id="@+id/activity_movie_detailed_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>